# AI-EventPlanner

./: .deployment  .dockerignore  .env.azure.fixed  .env.azure.sample  .env.azure2  .env.backup_20250306_203754  .env.coordinator  .env.example  .env.master  .env.saas  .env.saas.example  .env.saas.local  .env.saas.template  .env.test  .gitignore  AI_EVENT_PLANNER_FUNCTIONAL_SPEC_AND_MARKETING.md  AZURE_AGENT_FIX.md  AZURE_APP_SIMPLIFIED_FIX.md  AZURE_AUTH_DIRECTORY_FIX.md  AZURE_CONVERSATIONAL_AGENT_DEPLOYMENT_TASK.md  AZURE_CREDENTIALS.json  AZURE_CREDENTIALS.template.json  AZURE_DB_MIGRATION.md  AZURE_DB_MIGRATION_README.md  AZURE_DEPLOYMENT.md  AZURE_DEPLOYMENT_COMPLETE.md  AZURE_DEPLOYMENT_COMPLETE_GUIDE.md  AZURE_DEPLOYMENT_FINAL.md  AZURE_DEPLOYMENT_FIX.md  AZURE_DEPLOYMENT_FIXES_APPLIED.md  AZURE_DEPLOYMENT_FIXES_README.md  AZURE_DEPLOYMENT_FIXES_SUMMARY.md  AZURE_DEPLOYMENT_GITHUB_ACTIONS.md  AZURE_DEPLOYMENT_GUIDE.md  AZURE_DEPLOYMENT_NO_DOCKER.md  AZURE_DEPLOYMENT_PASSLIB_FIX.md  AZURE_DEPLOYMENT_PLAN.md  AZURE_DEPLOYMENT_README.md  AZURE_DEPLOYMENT_REQUIREMENTS_FIX_COMPLETE.md  AZURE_DEPLOYMENT_RESULTS.md  (+212 more)
app/: config.py  main.py  main_saas.py
deploy_temp_1750977831/: app_adapter_standalone.py  startup.sh
deploy_temp_1751122968/: requirements.txt
deploy_temp_1751125397/: startup.sh
deploy_temp_1751851882/: startup.sh
deploy_temp_1752015376/: app_adapter_conversational.py
deploy_temp_1752017623/: requirements.txt  web.config
deprecated/: Dockerfile.saas.fixed  README.md  apply_docker_security_fixes_v2.sh  azure-deploy-comprehensive.sh  azure-deploy-docker.sh  azure-deploy-docker.yml.fixed  azure-deploy-fixed.sh  azure-deploy-saas-python-fixed-v2.sh  azure-deploy-saas-python-no-docker.sh  deploy-app-to-azure.sh
docs/: CHAT-FOCUSED-SUMMARY.md  DARK-MODE-VERIFICATION.md  DEPLOYMENT-READINESS.md  FEATURE-PARITY-AUDIT.md  LOCAL_POSTGRES_SETUP.md  MOBILE-CLIENT-SUMMARY.md  PHASE-1-IMPLEMENTATION-PLAN.md  PHASE-1-PROGRESS.md  chat-focused-comparison.md  mobile-ui-additional-screens.md  mobile-ui-chat-focused.md  mobile-ui-design.md  mobile-ui-prototype.html
examples/: mcp_example.py
mcp-servers/: README.md
migrations/: env.py
scripts/: 01_create_azure_resources.sh  azure_db_info.py  check_azure_db_schema_and_data.py  create_azure_tables.py  create_azure_tables_direct_fixed.py  create_azure_tables_fixed.py  create_local_tables.py  create_tables_direct.py  create_test_user.py  deploy_to_azure.sh  deploy_via_github.sh  diagnose_azure.py  drop_and_reload_db.py  fix_event_organization_relationship.py  migrate.py  run_azure_migration_comprehensive.py  run_azure_migrations.py  seed_azure_db_basic.py  setup_azure_db_complete_fixed.py  setup_github_secrets.sh  test_auth.py  verify_azure_db.py  verify_database_config.py  verify_deployment.sh
tests/: README.md  conftest.py  events.test.js  exports.test.js  notifications.test.js  search.test.js  setup.js  team.test.js  (+3 more)
(+539 files in other folders)
