[tool.poetry]
name = "ai-event-planner"
version = "0.1.0"
description = "An AI-powered event planning system using LangGraph"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
langgraph = "^0.2.74"
langchain = "^0.3.19"
langchain-core = "^0.3.40"
langchain-openai = "^0.3.7"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
websockets = "^12.0"
python-dotenv = "^1.0.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
tavily-python = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[tool.poetry.group.google.dependencies]
langchain-google-genai = "^2.0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
